# backend-posts-api-redcell

./: .mise.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/backend-posts-api/: Chart.yaml  values.yaml
deploy/backend-posts-api/templates/: _helpers.tpl  app.yml  serviceaccount.yml
src/backend_posts_api/: app.py  database.py  models.py  settings.py
tests/: test_app.py
