[project]
name = "backend-posts-api-redcell"
version = "2024.1"
description = "Posts API for Red Cell take home"
authors = [
    {name = "Bryan Weber", email = "bryan.w.weber@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.4",
    "sqlalchemy[asyncio]>2",
    "sqlmodel>=0.0.19",
    "asyncpg>=0.29.0",
    "loguru>=0.7.2",
    "faker>=26.0.0",
    "uvicorn[standard]>=0.30.1",
    "markdown>=3.6",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "F",
    "E",
    "W",
    "I",
    "D103",
    "UP",
    "RUF",
    "ASYNC",
    "PERF",
    "FURB",
]

[tool.pdm.scripts]
ruff_format = "ruff format src/ tests/"
ruff_check_fix = "ruff check --fix src/ tests/"
format = { composite = ["ruff_format", "ruff_check_fix"] }
ruff_format_lint = "ruff format --check src/ tests/"
ruff_check = "ruff check src/ tests/"
lint = { composite = ["ruff_format_lint", "ruff_check" ] }
test = "pytest --cov=backend_posts_api tests/"
